--- a/music.html
+++ b/music.html
@@ -73,14 +73,13 @@
               Jeffery McFadden. I also hold a Certificate in Jazz Guitar Performance from New York University, and a
               Diploma in Music Performance with Distinction from Grant MacEwan University where I studied with jazz
               guitarists Jim Head and Jamie Philp.</p>
-            <p>Currently I am offering a limited number of online guitar lessons at a special discounted rate because of
-              the extraordinary circumstances the world finds itself in now.</p>
+            <!-- <p>Currently I am offering a limited number of online guitar lessons at a special discounted rate because of the extraordinary circumstances the world finds itself in now.</p> -->
             <p>My fee for half hour lessons is: </p>
-            <h3 style="margin-bottom: 0px;"><b>$25</b></h3>
-            <p><small><i>Save $5 per lesson.</i></small></p>
+            <h3 style="margin-bottom: 0px;"><b>$30</b></h3>
+            <!-- <p><small><i>Save $5 per lesson.</i></small></p> -->
             <p>My fee for hour lessons is:</p>
-            <h3 style="margin-bottom: 0px;"><b>$45</b></h3>
-            <p><small><i>Save $15 per lesson.</i></small></p>
+            <h3 style="margin-bottom: 0px;"><b>$60</b></h3>
+            <!-- <p><small><i>Save $15 per lesson.</i></small></p> -->
             <p>If you are interested in checking out some of my music you
               can do so <a class="u-underline-none" href="https://timlemke.bandcamp.com/" target="_blank">here, </a> <a
                 class="u-underline-none" href="https://timlemke.bandcamp.com/" target="_blank"><i class="fa fa-bandcamp"
