Lessons page updates

--- a/music.html
+++ b/music.html
@@ -5,7 +5,8 @@
   <title>TIM LEMKE | ONLINE GUITAR LESSONS</title>
   <meta name="description" content="Online Guitar Lessons with Tim Lemke">
   <meta name="author" content="Tim Lemke">
-  <meta property="og:image" url="/Public/Images/Tim-Teaching-Banner3.jpg" content="/Public/Images/Tim-Teaching-Banner3.jpg">
+  <meta property="og:image" url="/Public/Images/Website-Banner-Three.jpg"
+    content="/Public/Images/Website-Banner-Three.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- * * * FONT * * * -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -54,7 +55,7 @@
       <div class="container">
         <div class="row">
           <div class="twelve columns">
-            <img class="u-max-full-width" src="/Public/Images/Tim-Teaching-Banner3.jpg"
+            <img class="u-max-full-width" src="/Public/Images/Website-Banner-Three.jpg"
               alt="Image of Tim teaching guitar on computer screen">
           </div>
           <div class="twelve columns">
@@ -73,13 +74,20 @@
               Jeffery McFadden. I also hold a Certificate in Jazz Guitar Performance from New York University, and a
               Diploma in Music Performance with Distinction from Grant MacEwan University where I studied with jazz
               guitarists Jim Head and Jamie Philp.</p>
-            <!-- <p>Currently I am offering a limited number of online guitar lessons at a special discounted rate because of the extraordinary circumstances the world finds itself in now.</p> -->
-            <p>My fee for half hour lessons is: </p>
-            <h3 style="margin-bottom: 0px;"><b>$30</b></h3>
-            <!-- <p><small><i>Save $5 per lesson.</i></small></p> -->
-            <p>My fee for hour lessons is:</p>
-            <h3 style="margin-bottom: 0px;"><b>$60</b></h3>
-            <!-- <p><small><i>Save $15 per lesson.</i></small></p> -->
+            <div class="row u-double-margin-bottom">
+              <div class="four columns u-text-center">
+                <p class="u-text-bold">My fee for 30min lessons is: </p>
+                <h3 style="margin-bottom: 0px;"><b>$30</b></h3>
+              </div>
+              <div class="four columns u-text-center">
+                <p class="u-text-bold">My fee for 45 minute lessons is: </p>
+                <h3 style="margin-bottom: 0px;"><b>$45</b></h3>
+              </div>
+              <div class="four columns u-text-center">
+                <p class="u-text-bold">My fee for hour lessons is: </p>
+                <h3 style="margin-bottom: 0px;"><b>$60</b></h3>
+              </div>
+            </div>
             <p>If you are interested in checking out some of my music you
               can do so <a class="u-underline-none" href="https://timlemke.bandcamp.com/" target="_blank">here, </a> <a
                 class="u-underline-none" href="https://timlemke.bandcamp.com/" target="_blank"><i class="fa fa-bandcamp"
@@ -88,8 +96,14 @@
                 href="https://soundcloud.com/tim-lemke-music" target="_blank"><i class="fa fa-soundcloud"
                   aria-hidden="true"></i></a>.</p>
             <p>Thanks for stopping by! I look forward to working with you!</p>
-            <img src="/Public/Images/Website-Studio-Image.jpg" alt="Wayne and Angus Funko Pop next to Yamaha THR amp."
-              class="u-max-full-width">
+            <img src="/Public/Images/collage-one.jpg" alt="Music Studio Collage Image" class="u-max-full-width">
+            <p class="u-text-center u-text-bold"><i class="fa fa-calendar" aria-hidden="true"></i> Currently Available Time Spots: </p>
+            <div class="u-text-center">
+              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:00 pm - Alternating Weeks</p>
+              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:30 pm</p>
+              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:00 pm</p>
+              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:30 pm</p>
+            </div>
           </div>
         </div>
       </div>
@@ -118,8 +132,12 @@
           <textarea class="u-full-width" placeholder="Hi Tim …" id="messageTextArea" name="message"></textarea>
           <input class="button-primary" type="submit" value="Submit">
         </form>
+        <img src="/Public/Images/collage-three.jpg" alt="Music Studio Collage Image" class="u-max-full-width">
       </div>
       <p class="u-text-center"><a href="#header"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></p>
+      <p class="u-text-center">
+        <img class="music-header-logo" src="/Public/Images/Guitar-Player-Footer.png" alt="">
+      </p>
       <hr>
     </section>
   </main>
