More styling edits.

--- a/music.html
+++ b/music.html
@@ -99,10 +99,10 @@
             <img src="/Public/Images/collage-one.jpg" alt="Music Studio Collage Image" class="u-max-full-width">
             <p class="u-double-margin-top u-text-center u-text-bold"><i class="fa fa-calendar" aria-hidden="true"></i> Currently Available Time Spots: </p>
             <div class="u-text-center">
-              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:00 pm - Alternating Weeks</p>
-              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:30 pm</p>
-              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:00 pm</p>
-              <p><span class="u-text-bold">Wednesdays: <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:30 pm</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:00 pm - Alternating Weeks</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:30 pm</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:00 pm</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:30 pm</p>
             </div>
           </div>
         </div>
