--- a/music.html
+++ b/music.html
@@ -15,6 +15,16 @@
   <!-- * * * Favicon * * * -->
   <link rel="icon" type="image/png" href="favicon-guitar-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-guitar-16x16.png" sizes="16x16" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178549861-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-178549861-1');
+  </script>
 </head>
 <body>
   <!-- * * * HEADER * * * -->
@@ -97,12 +107,17 @@
                   aria-hidden="true"></i></a>.</p>
             <p>Thanks for stopping by! I look forward to working with you!</p>
             <img src="/Public/Images/collage-one.jpg" alt="Music Studio Collage Image" class="u-max-full-width">
-            <p class="u-double-margin-top u-text-center u-text-bold"><i class="fa fa-calendar" aria-hidden="true"></i> Currently Available Time Spots: </p>
+            <p class="u-double-margin-top u-text-center u-text-bold"><i class="fa fa-calendar" aria-hidden="true"></i>
+              Currently Available Time Spots: </p>
             <div class="u-text-center">
-              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:00 pm - Alternating Weeks</p>
-              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:30 pm</p>
-              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:00 pm</p>
-              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:30 pm</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:00
+                pm - Alternating Weeks</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 7:30
+                pm</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:00
+                pm</p>
+              <p><span class="u-text-bold">Wednesdays:<br> <i class="fa fa-clock-o" aria-hidden="true"></i></span> 8:30
+                pm</p>
             </div>
           </div>
         </div>
