WordPress text edit.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <li>Developing web sites and web applications for numerous clients across many different industries.
                 </li>
                 <li>Working daily with HTML5, CSS3, JavaScript, jQuery, Bootstrap, Foundation for Sites, SCSS (Sass),
-                  Gulp, Webpack, Kentico CMS (Portal Engine and MVC Solutions), Wordpress, C#, ASP.NET, Web Forms and
+                  Gulp, Webpack, Kentico CMS (Portal Engine and MVC Solutions), WordPress, C#, ASP.NET, Web Forms and
                   MVC, Adobe Photoshop and Illustrator, Git, GitHub, Bitbucket and Sourcetree, among other languages,
                   tools and technologies.</li>
                 <li>Actively involved in all stages of development life cycle, including interfacing with clients and
