Small text edits.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <div class="twelve columns">
             <h2>About Me</h2>
             <p>Hello!</p>
-            <p>Thanks for checking out my site. My name is Tim Lemke, and I am full stack web developer living and
-              working in London ON. I have over two years of professional experience and have worked in both a B2B SaaS
+            <p>Thanks for checking out my site. My name is Tim Lemke, and I am full stack web developer living in and
+              working remotely from London ON. I have over three years of professional experience and have worked in both a B2B SaaS
               environment and agency setting. Personally, I feel most comfortable in any setting where inclusivity,
               teamwork and a good sense of humour can be found.</p>
             <p>As a developer I always love learning something new and delivering the best code I can every time. That
@@ -106,7 +106,7 @@
                 <li>Developing web sites and web applications for numerous clients across many different industries.
                 </li>
                 <li>Working daily with HTML5, CSS3, JavaScript, jQuery, Bootstrap, Foundation for Sites, SCSS (Sass),
-                  Gulp, Webpack, Kentico CMS (Portal Engine and MVC Solutions), WordPress, C#, ASP.NET, Web Forms and
+                  Gulp, Webpack, Kentico CMS (Portal Engine and MVC Solutions), Wordpress, C#, ASP.NET, Web Forms and
                   MVC, Adobe Photoshop and Illustrator, Git, GitHub, Bitbucket and Sourcetree, among other languages,
                   tools and technologies.</li>
                 <li>Actively involved in all stages of development life cycle, including interfacing with clients and
