Live site updates

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <li>Worked alongside QA department to improve accessibility of current web application and to ensure it
                   meets current WCAG and AODA standards. Actively involved in accessibility testing, identifying and
                   addressing issues.</li>
-                <li>Actively involved in the design of new Angular web application project and fixing cross
+                <li>Was actively involved in the design of new Angular web application project and fixing cross
                   browser compatibility issues of current web application.</li>
                 <li>Organized internal web accessibility training sessions for developers in an effort to create and
                   maintain internal accessibility development standards.</li>
@@ -199,7 +199,7 @@
         <h2>Contact</h2>
         <p>Send me an email at <a href="mailto:timlemkedeveloper@gmail.com" target="_top">timlemkedeveloper@gmail.com</a>, or fill out the form
           below.</p>
-        <p>Want a copy of my resume? <a class="u-underline-none" href="/Public/TL-Resume.pdf" target="_blank">Click here. </a><a class="u-underline-none"
+        <p>Want a copy of my resume? <a class="u-underline-none" href="/Public/TimLemke-Resume.pdf" target="_blank">Click here. </a><a class="u-underline-none"
           href="/Public/TimLemke-Resume.pdf" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i></a></p>
         <form action="https://formspree.io/timlemkedeveloper@gmail.com" method="POST">
           <div class="row">
