Small content edits.

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               </li>
             </ul>
             <p>Created a modern WordPress theme from scratch utilizing custom developed Gutenberg compatible blocks to
-              implenent required functionality.</p>
+              implement required functionality.</p>
             <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://www.collegeofnaturopaths.on.ca/"
                 target="_blank">Visit the site here.</a></p>
           </div>
@@ -391,7 +391,7 @@
                 <i class="icon-logokentico" aria-hidden="true"></i>
               </li>
             </ul>
-            <p>Custom Kentico MVC site build. To meet clients requirements, developed numerous custom page builder
+            <p>Custom Kentico MVC site build. Developed numerous custom page builder
               widgets to facilitate dynamic content entry.</p>
             <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://www.cfpc.ca/en/home"
                 target="_blank">Visit the site here.</a></p>
