Adding Elevation Pictures site to Client work section.

--- a/index.html
+++ b/index.html
@@ -397,6 +397,26 @@
                 target="_blank">Visit the site here.</a></p>
           </div>
         </div>
+        <div class="row">
+          <div class="four columns">
+            <p class="u-text-bold">Elevation Pictures Site Build</p>
+            <img class="u-max-full-width" src="/Public/Images/elevationPictures-ScreenShot.png" alt="OPPI Web Site Screenshot">
+            <ul class="u-inline-list">
+              <li>
+                <i class="devicon-dot-net-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-php-plain " aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-wordpress-plain " aria-hidden="true"></i>
+              </li>
+            </ul>
+            <p>Converted custom developed ASP.NET CMS site into a modern WordPress theme. Implemented custom post types and PHP code to replicate and improve upon functionality of original site.</p>
+            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="http://elevated-dev.atwebpages.com/"
+                target="_blank">Visit the site here.</a></p>
+          </div>
+        </div>
       </div>
       <hr>
     </section>
