Adding additional portfolio items.

--- a/index.html
+++ b/index.html
@@ -203,89 +203,6 @@
         </div>
         <div class="row">
           <div class="twelve columns">
-            <h4>Personal Projects</h4>
-            <p>A selection of some of the personal projects I have created.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="four columns">
-            <p class="u-text-bold">GitHub Finder</p>
-            <img class="u-max-full-width" src="/Public/Images/githubFinder-ScreenShot.png" alt="World of Flavour Web Application Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-react-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-bootstrap-plain " aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>A React Web Application built using functional components, hooks, React Router, the Context API and the GitHub API.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
-                href="https://tl-github-finder.netlify.app/" target="_blank">Check it out here.</a></p>
-            <p><i class="fa fa-github" aria-hidden="true"></i> <a
-                href="https://github.com/TimLemke/tl-github-finder" target="_blank">GitHub Repo</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">World of Flavour</p>
-            <img class="u-max-full-width" src="/Public/Images/worldOfFlavour-ScreenShot.png" alt="World of Flavour Web Application Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>A Web App built using JavaScript, jQuery, SCSS, and the Zomato API.</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
-                href="https://timlemke.github.io/tim_lemke_worldOfFlavour/" target="_blank">Check it out here.</a></p>
-            <p><i class="fa fa-github" aria-hidden="true"></i> <a
-                href="https://github.com/TimLemke/tim_lemke_worldOfFlavour" target="_blank">GitHub Repo</a></p>
-          </div>
-          <div class="four columns">
-            <p class="u-text-bold">Emoji Match</p>
-            <img class="u-max-full-width" src="/Public/Images/emojiMatch-ScreenShot.png" alt="Emoji Match Web Application Screenshot">
-            <ul class="u-inline-list">
-              <li>
-                <i class="devicon-html5-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-css3-plain"></i>
-              </li>
-              <li>
-                <i class="devicon-sass-original" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-javascript-plain" aria-hidden="true"></i>
-              </li>
-              <li>
-                <i class="devicon-jquery-plain" aria-hidden="true"></i>
-              </li>
-            </ul>
-            <p>A dynamic matching game built using JavaScript, jQuery and SCSS</p>
-            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
-                href="https://timlemke.github.io/tim_lemke_emojiMatch/" target="_blank">Check it out here.</a></p>
-            <p><i class="fa fa-github" aria-hidden="true"></i> <a
-                href="https://github.com/TimLemke/tim_lemke_emojiMatch" target="_blank">GitHub Repo</a></p>
-          </div>
-          <div class="four columns">
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="twelve columns">
             <h4>Select Client Work</h4>
             <p>A selection of some of the client projects I have worked on.</p>
           </div>
@@ -400,7 +317,7 @@
         <div class="row">
           <div class="four columns">
             <p class="u-text-bold">Elevation Pictures Site Build</p>
-            <img class="u-max-full-width" src="/Public/Images/elevationPictures-ScreenShot.png" alt="OPPI Web Site Screenshot">
+            <img class="u-max-full-width" src="/Public/Images/elevationPictures-ScreenShot.png" alt="Elevation Pictures Web Site Screenshot">
             <ul class="u-inline-list">
               <li>
                 <i class="devicon-dot-net-plain" aria-hidden="true"></i>
@@ -415,6 +332,149 @@
             <p>Converted custom developed ASP.NET CMS site into a modern WordPress theme. Implemented custom post types and PHP code to replicate and improve upon functionality of original site.</p>
             <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="http://elevated-dev.atwebpages.com/"
                 target="_blank">Visit the site here.</a></p>
+          </div>
+          <div class="four columns">
+            <p class="u-text-bold">NewSong Academy Site Build</p>
+            <img class="u-max-full-width" src="/Public/Images/newsongAcademy-ScreenShot.png" alt="NewSong Academy Web Site Screenshot">
+            <ul class="u-inline-list">
+              <li>
+                <i class="devicon-html5-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-css3-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-bootstrap-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-sass-original" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-javascript-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-jquery-plain" aria-hidden="true"></i>
+              </li>
+            </ul>
+            <p>Designed and built custom static HTML site. Created and implemented original custom design based on clients needs.</p>
+            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://www.newsongacademy.ca/"
+                target="_blank">Visit the site here.</a></p>
+          </div>
+          <div class="four columns">
+            <p class="u-text-bold">Toronto Global Landing Page</p>
+            <img class="u-max-full-width" src="/Public/Images/torontoGlobal-ScreenShot.png" alt="NewSong Academy Web Site Screenshot">
+            <ul class="u-inline-list">
+              <li>
+                <i class="devicon-html5-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-css3-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-bootstrap-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-sass-original" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-javascript-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-jquery-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-dot-net-plain" aria-hidden="true"></i>
+              </li>
+              <li class="kentico-icon-container">
+                <i class="icon-logokentico" aria-hidden="true"></i>
+              </li>
+            </ul>
+            <p>Designed and implemented custom landing page within exisiting client site. Work also included implementation of custom interactive dashboard for data exploration.</p>
+            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a href="https://torontoglobal.ca/our-industries/technology"
+                target="_blank">Visit the site here.</a></p>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="twelve columns">
+            <h4>Personal Projects</h4>
+            <p>A selection of some of the personal projects I have created.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="four columns">
+            <p class="u-text-bold">GitHub Finder</p>
+            <img class="u-max-full-width" src="/Public/Images/githubFinder-ScreenShot.png" alt="World of Flavour Web Application Screenshot">
+            <ul class="u-inline-list">
+              <li>
+                <i class="devicon-react-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-javascript-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-bootstrap-plain " aria-hidden="true"></i>
+              </li>
+            </ul>
+            <p>A React Web Application built using functional components, hooks, React Router, the Context API and the GitHub API.</p>
+            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
+                href="https://tl-github-finder.netlify.app/" target="_blank">Check it out here.</a></p>
+            <p><i class="fa fa-github" aria-hidden="true"></i> <a
+                href="https://github.com/TimLemke/tl-github-finder" target="_blank">GitHub Repo</a></p>
+          </div>
+          <div class="four columns">
+            <p class="u-text-bold">World of Flavour</p>
+            <img class="u-max-full-width" src="/Public/Images/worldOfFlavour-ScreenShot.png" alt="World of Flavour Web Application Screenshot">
+            <ul class="u-inline-list">
+              <li>
+                <i class="devicon-html5-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-css3-plain"></i>
+              </li>
+              <li>
+                <i class="devicon-sass-original" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-javascript-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-jquery-plain" aria-hidden="true"></i>
+              </li>
+            </ul>
+            <p>A Web App built using JavaScript, jQuery, SCSS, and the Zomato API.</p>
+            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
+                href="https://timlemke.github.io/tim_lemke_worldOfFlavour/" target="_blank">Check it out here.</a></p>
+            <p><i class="fa fa-github" aria-hidden="true"></i> <a
+                href="https://github.com/TimLemke/tim_lemke_worldOfFlavour" target="_blank">GitHub Repo</a></p>
+          </div>
+          <div class="four columns">
+            <p class="u-text-bold">Emoji Match</p>
+            <img class="u-max-full-width" src="/Public/Images/emojiMatch-ScreenShot.png" alt="Emoji Match Web Application Screenshot">
+            <ul class="u-inline-list">
+              <li>
+                <i class="devicon-html5-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-css3-plain"></i>
+              </li>
+              <li>
+                <i class="devicon-sass-original" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-javascript-plain" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="devicon-jquery-plain" aria-hidden="true"></i>
+              </li>
+            </ul>
+            <p>A dynamic matching game built using JavaScript, jQuery and SCSS</p>
+            <p><i class="fa fa-external-link" aria-hidden="true"></i> <a
+                href="https://timlemke.github.io/tim_lemke_emojiMatch/" target="_blank">Check it out here.</a></p>
+            <p><i class="fa fa-github" aria-hidden="true"></i> <a
+                href="https://github.com/TimLemke/tim_lemke_emojiMatch" target="_blank">GitHub Repo</a></p>
+          </div>
+          <div class="four columns">
           </div>
         </div>
       </div>
